--- a/src/app/product-card/product-card.html
+++ b/src/app/product-card/product-card.html
@@ -1,6 +1,66 @@
-<div class="card">
-    <span>{{oneCar.fabricante}}</span>
-    <span>{{oneCar.modelo}}</span>
-    <span>{{oneCar.precio}}</span>
-    <span>{{oneCar.tipoMotor}}</span>
+<!-- <div class="card text-white bg-primary mb-3 shadow">
+  <div class="card-header border-light">Detalles del Vehículo</div>
+  <div class="card-body">
+    <h5 class="card-title">{{oneCar.fabricante}} - {{oneCar.modelo}}</h5>
+    <div class="d-flex justify-content-between align-items-center pt-2">
+      <span class="badge bg-warning text-dark p-2">
+        Precio: **{{oneCar.precio}}**
+      </span>
+      <span class="text-uppercase small">
+        Motor: {{oneCar.tipoMotor}}
+      </span>
+    </div>
+  </div>
+</div> -->
+
+<!-- <div class="card shadow border-0 mb-3">
+  
+  <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+    <span class="h5 m-0">{{oneCar.fabricante}}</span>
+    <small class="text-white-50">Vehículo</small>
+  </div>
+
+  <div class="card-body">
+    <h3 class="card-title text-dark">{{oneCar.modelo}}</h3>
+    
+    <div class="d-flex justify-content-between align-items-center mt-4">
+      <span class="badge rounded-pill bg-success p-3 fs-6">
+        💰 {{oneCar.precio}}
+      </span>
+      
+      <span class="text-muted fw-bold text-uppercase">
+        <i class="bi bi-gear-fill"></i> {{oneCar.tipoMotor}}
+      </span>
+    </div>
+  </div>
+  
+</div> -->
+
+<div class="card shadow border-0 mb-3 card-hover">
+  
+  <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+    <span class="h5 m-0">{{oneCar.fabricante}}</span>
+    <small class="text-white-50">Vehículo</small>
+  </div>
+
+  <img 
+    [src]="oneCar.fotoUrl" 
+    [alt]="oneCar.modelo" 
+    class="w-100 bg-light"
+    style="height: 200px; object-fit: cover;">
+
+  <div class="card-body">
+    <h3 class="card-title text-dark">{{oneCar.modelo}}</h3>
+    
+    <div class="d-flex justify-content-between align-items-center mt-4">
+      <span class="badge rounded-pill bg-success p-3 fs-6">
+        💰 {{oneCar.precio}}
+      </span>
+      
+      <span class="text-muted fw-bold text-uppercase">
+        <i class="bi bi-gear-fill"></i> {{oneCar.tipoMotor}}
+      </span>
+    </div>
+  </div>
+  
 </div>
